--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -23,6 +23,7 @@
 
 body {
   min-height: 100vh;
+  overflow-y: hidden;
   color: var(--ios-text-primary);
   background: var(--ios-background);
   transition: all 0.3s ease;
